--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,44 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.formulaire {
+  margin : 36px;
+  padding-right: 1000px;
+}
+
+h1 {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(92, 92, 92);
+  padding-bottom: 24px;
+}
+
+#question {
+  padding: 24px;
+  border-left: 4px solid gray;
+  margin-bottom: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#response {
+  background-color: rgb(243, 236, 182);
+  font-weight: bolder;
+  padding: 24px ;
+  border-left: 4px solid gray;
+  margin-bottom: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.link {
+  text-decoration: none;
+  color: rgb(109, 109, 255);
+}
+
+.button {
+  padding: 8px 24px 8px 24px;
+  background-color: rgb(94, 94, 252);
+  border-radius: 3px;
+  border-color: rgb(94, 94, 252);
+  }
+
+.case {
+  border-radius: 3px;
+  padding: 8px;
+}
